<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    android:padding="22dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/t_f8f958b4"
        android:textColor="@color/fc_muted" android:textSize="13sp" />
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/t_f11b368c">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etName" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textPersonName|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/t_ce8ae9da">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etEmail" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/t_bcc254b5">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etPhone" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/t_2aa98bad">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etPassword" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
